--- a/index.html
+++ b/index.html
@@ -256,6 +256,87 @@
                                 <use href="./images/icons.svg#arrow-bottom"></use>
                             </svg>
                         </a>
+                        <img
+                            class="w-full grid-item inline-block mb-6 sm_xl:mb-10"
+                            src="./images/projects-1.jpg"
+                            alt="Modern Garden Arrangement nr.1"
+                            width="451"
+                            height="601"
+                            loading="lazy"
+                            data-custom-number="1"
+                        >
+                        <img
+                            class="w-full grid-item inline-block mb-6 sm_xl:mb-10"
+                            src="./images/projects-2.jpg"
+                            alt="Modern Garden Arrangement nr.2"
+                            width="451"
+                            height="337px"
+                            loading="lazy"
+                            data-custom-number="2"
+                        >
+                        <img
+                            class="w-full grid-item inline-block mb-6 sm_xl:mb-10"
+                            src="./images/projects-3.jpg"
+                            alt="Modern Garden Arrangement nr.3"
+                            width="451"
+                            height="451px"
+                            loading="lazy"
+                            data-custom-number="3"
+                        >
+                        <img
+                            class="w-full grid-item inline-block mb-6 sm_xl:mb-10"
+                            src="./images/projects-4.jpg"
+                            alt="Modern Garden Arrangement nr.4"
+                            width="451"
+                            height="601px"
+                            loading="lazy"
+                            data-custom-number="4"
+                        >
+                        <img
+                            class="w-full grid-item inline-block mb-6 sm_xl:mb-10"
+                            src="./images/projects-5.jpg"
+                            alt="Modern Garden Arrangement nr.5"
+                            width="451"
+                            height="451px"
+                            loading="lazy"
+                            data-custom-number="5"
+                        >
+                        <img
+                            class="w-full grid-item inline-block mb-6 sm_xl:mb-10"
+                            src="./images/projects-6.jpg"
+                            alt="Modern Garden Arrangement nr.6"
+                            width="451"
+                            height="603px"
+                            loading="lazy"
+                            data-custom-number="6"
+                        >
+                        <img
+                            class="w-full grid-item inline-block mb-6 sm_xl:mb-10"
+                            src="./images/projects-7.jpg"
+                            alt="Modern Garden Arrangement nr.7"
+                            width="451"
+                            height="603px"
+                            loading="lazy"
+                            data-custom-number="7"
+                        >
+                        <img
+                            class="w-full grid-item inline-block mb-6 sm_xl:mb-10"
+                            src="./images/projects-8.jpg"
+                            alt="Modern Garden Arrangement nr.8"
+                            width="451"
+                            height="600px"
+                            loading="lazy"
+                            data-custom-number="8"
+                        >
+                        <img
+                            class="w-full grid-item inline-block mb-6 sm_xl:mb-10"
+                            src="./images/projects-9.jpg"
+                            alt="Modern Garden Arrangement nr.9"
+                            width="451"
+                            height="338px"
+                            loading="lazy"
+                            data-custom-number="9"
+                        >
                     </div>
                     <div id="modal" class="modal hidden fixed top-0 left-0 w-full h-full flex justify-center items-center bg-black bg-opacity-75 z-10">
                         <img id="modal-image" class="modal-content fixed max-w-full max-h-full left-1/2 -translate-x-1/2 top-1/2 -translate-y-1/2" loading="lazy">
@@ -333,14 +414,14 @@
                 <div class="text-sm md:text-base grid grid-cols-2 sm:grid-cols-1 sm:col-span-1 gap-6 sm:gap-8"></div>
             </div>
         </footer>
+        <script type="module" src="/scripts/generateImageOverlay.js"></script>
         <script type="module" src="/scripts/index.js"></script>
-        <script type="module" src="/scripts/generateGallery.js"></script>
         <script type="module" src="/scripts/toggleMenu.js"></script>
-        <script type="module" src="/scripts/masonryLayout.js"></script>
         <script type="module" src="/scripts/slider.js"></script>
         <script type="module" src="/scripts/dropdownMenu.js"></script>
         <script type="module" src="/scripts/searchInput.js"></script>
         <script type="module" src="/scripts/gallery.js"></script>
         <script type="module" src="/scripts/helpers/animations.js"></script>
+        <script defer type="module" src="/scripts/masonryLayout.js"></script>
     </body>
 </html>
