--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                             </svg>
                         </a>
                         <img
-                            class="w-full grid-item inline-block mb-6 sm_xl:mb-10"
+                            class="w-full grid-item mb-6 sm_xl:mb-10"
                             src="./images/projects-1.jpg"
                             alt="Modern Garden Arrangement nr.1"
                             width="451"
@@ -266,7 +266,7 @@
                             data-custom-number="1"
                         >
                         <img
-                            class="w-full grid-item inline-block mb-6 sm_xl:mb-10"
+                            class="w-full grid-item mb-6 sm_xl:mb-10"
                             src="./images/projects-2.jpg"
                             alt="Modern Garden Arrangement nr.2"
                             width="451"
@@ -275,7 +275,7 @@
                             data-custom-number="2"
                         >
                         <img
-                            class="w-full grid-item inline-block mb-6 sm_xl:mb-10"
+                            class="w-full grid-item mb-6 sm_xl:mb-10"
                             src="./images/projects-3.jpg"
                             alt="Modern Garden Arrangement nr.3"
                             width="451"
@@ -284,7 +284,7 @@
                             data-custom-number="3"
                         >
                         <img
-                            class="w-full grid-item inline-block mb-6 sm_xl:mb-10"
+                            class="w-full grid-item mb-6 sm_xl:mb-10"
                             src="./images/projects-4.jpg"
                             alt="Modern Garden Arrangement nr.4"
                             width="451"
@@ -293,7 +293,7 @@
                             data-custom-number="4"
                         >
                         <img
-                            class="w-full grid-item inline-block mb-6 sm_xl:mb-10"
+                            class="w-full grid-item mb-6 sm_xl:mb-10"
                             src="./images/projects-5.jpg"
                             alt="Modern Garden Arrangement nr.5"
                             width="451"
@@ -302,7 +302,7 @@
                             data-custom-number="5"
                         >
                         <img
-                            class="w-full grid-item inline-block mb-6 sm_xl:mb-10"
+                            class="w-full grid-item mb-6 sm_xl:mb-10"
                             src="./images/projects-6.jpg"
                             alt="Modern Garden Arrangement nr.6"
                             width="451"
@@ -311,7 +311,7 @@
                             data-custom-number="6"
                         >
                         <img
-                            class="w-full grid-item inline-block mb-6 sm_xl:mb-10"
+                            class="w-full grid-item mb-6 sm_xl:mb-10"
                             src="./images/projects-7.jpg"
                             alt="Modern Garden Arrangement nr.7"
                             width="451"
@@ -320,7 +320,7 @@
                             data-custom-number="7"
                         >
                         <img
-                            class="w-full grid-item inline-block mb-6 sm_xl:mb-10"
+                            class="w-full grid-item mb-6 sm_xl:mb-10"
                             src="./images/projects-8.jpg"
                             alt="Modern Garden Arrangement nr.8"
                             width="451"
@@ -329,7 +329,7 @@
                             data-custom-number="8"
                         >
                         <img
-                            class="w-full grid-item inline-block mb-6 sm_xl:mb-10"
+                            class="w-full grid-item mb-6 sm_xl:mb-10"
                             src="./images/projects-9.jpg"
                             alt="Modern Garden Arrangement nr.9"
                             width="451"
