feat: open dropdown menu on hover

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                             <div class="items-center justify-between sm:justify-end w-full flex">
                                 <ul class="sm:items-center sm:gap-4 sm_xl:gap-8 text-sm hidden sm:flex flex-wrap">
                                     <li>
-                                        <a class="flex items-center group transition-all cursor-pointer hover:scale-[1.05] hover:text-gray-700 hover:animate-pulse" data-menu-trigger>
+                                        <a href="#" class="flex items-center group transition-all cursor-pointer hover:scale-[1.05] hover:text-gray-700 hover:animate-pulse" data-menu-trigger>
                                             <span class="text-xs md:text-sm">Oferta</span>
                                             <svg class="w-6 h-4 fill-current group-hover:text-gray-600 hover:fill-gray-400 focus:fill-gray-400">
                                                 <use href="./images/icons.svg#arrow"></use>
